force-app/main/default/objects/Student__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Student Address</description>
    <inlineHelpText>Enter student address</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>