force-app/main/default/objects/Student__c/fields/Biology__c.field-meta.xml
<CustomField>
    <fullName>Biology__c</fullName>
    <description>Biology Subject Marks</description>
    <label>Biology</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>