force-app/main/default/objects/Student__c/fields/Computer_Science__c.field-meta.xml
<CustomField>
    <fullName>Computer_Science__c</fullName>
    <description>Computer Science Subject Marks</description>
    <label>Computer Science</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>