force-app/main/default/objects/Student__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email Address</description>
    <inlineHelpText>enter Email Address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>