force-app/main/default/objects/Student__c/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <description>English Subject Marks</description>
    <label>English</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>