force-app/main/default/objects/Student__c/fields/Mathematics__c.field-meta.xml
<CustomField>
    <fullName>Mathematics__c</fullName>
    <description>Mathematics subject Marks</description>
    <label>Mathematics</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>