force-app/main/default/objects/Student__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Studen Phone Number</description>
    <inlineHelpText>Enter Student Phone Number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>