force-app/main/default/objects/Student__c/recordTypes/EEE_Students.recordType-meta.xml
<RecordType>
    <fullName>EEE_Students</fullName>
    <active>true</active>
    <label>EEE Students</label>
</RecordType>