force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Address__c</columns>
    <columns>English__c</columns>
    <columns>Mathematics__c</columns>
    <columns>Biology__c</columns>
    <columns>Computer_Science__c</columns>
    <columns>Total_Marks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>